--- a/client/views/partials/login.html
+++ b/client/views/partials/login.html
@@ -2,8 +2,9 @@
   <div class="span6 top-margin">
     <h1 class="homeHeader">The Learning Design Tool for Italian Language Teachers</h1>
     <p class="centered"><img src="../img/toolbox.png" class="toolbox"></p>
-      <p>Maecenas blandit, neque sit amet imperdiet sodales, nisl orci tempor nibh, vel eleifend massa leo adipiscing dui. Donec vitae mi nisi. Ut sed porta velit. Aliquam at vestibulum tortor. Nullam suscipit lacus vel diam consectetur, ac scelerisque massa faucibus. In vitae sapien in tortor iaculis vestibulum. Donec eget fringilla elit, eget cursus turpis. </p>
-      </div>
+     <p>Ledita is a free web application created for teachers of Italian as a second/foreign language. The aim of this application is to support the educational planning carried out by the teachers, proposing a simple, fast and intuitive design process.</p>
+      <p>With Ledita, teachers can create educational designs and make them visible to colleagues all around the world, to share educational experiences and learn from the dialogue and collaboration with other professionals.</p>
+  </div>
   <div class="span6">
 
     <!-- The RegisterCtrl is specified here because this partial also has login form in top nav
