display error message when a design has no contents

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -720,6 +720,11 @@ input.sidebarInput {
 
 /* activities diagram
 ===================== */
+#activityErrors {
+    width: 50%;
+    margin: 20px auto;
+}
+
 .titleRight {
     float: right;
 }
