adding validation rules for ld name in modal form

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -477,6 +477,14 @@ margin-left: 4%;
     color: #ffffff;
 }
 
+.errorTipModal {
+    color: #FFFFFF;
+    font-size: 12px;
+    background-color: #990000;
+    padding: 3px;
+    border-radius: 4px;
+    margin:0 0 0 28% ;
+}
 /* new LD creation
  ==================== */
 .sidebarForm {
