--- a/client/views/index.html
+++ b/client/views/index.html
@@ -63,7 +63,8 @@
                         <button type="button" class="btn btn-small btn-menu">Explore LDs</button>
                     </li>
                     <li>
-                        <button id="createLd" type="button" class="btn btn-small btn-menu" href ng-click="createLD()">Create a New
+                        <button id="createLd" type="button" class="btn btn-small btn-menu" href ng-click="createLD()">
+                            Create a New
                             LD
                         </button>
 
@@ -93,112 +94,164 @@
                 </div>
 
                 <!-- Start LD creation Modal -->
-				<div modal="beOpen" close="closeLD()" options="opts">
+                <div modal="beOpen" close="closeLD()" options="opts">
 
-				    <div class="modal-header">
-				        <h4>Create a New Design</h4>
-				        <div class="clearfix"></div>
-				    </div>
-				    <div ng-controller="LdCreateCtrl" class="modal-body">
-				        <form novalidate="" class="createLdForm" name="LdCreateForm">
-				            <div class="formLevel">
+                    <div class="modal-header">
+                        <h4>Create a New Design</h4>
+
+                        <div class="clearfix"></div>
+                    </div>
+                    <form novalidate class="createLdForm" name="LdCreateForm" ng-submit="ok()">
+                        <div ng-controller="LdCreateCtrl" class="modal-body">
+
+                            <div class="formLevel">
+                                <div class="errorBox">
+                                    <span class="errorTipModal"
+                                          ng-show="LdCreateForm.ldName.$dirty && LdCreateForm.ldName.$error.required">Required!</span>
+                                    <span class="errorTipModal" ng-show="LdCreateForm.ldName.$error.pattern">The design name cannot contain this symbol.</span>
+                                    <span class="errorTipModal" ng-show="LdCreateForm.ldName.$error.maxlength">The design name cannot be longer than 50 characters.</span>
+                                </div>
                                 <label class="formLabel"><i class="icon-ok"></i> Design Name*:</label>
-				                <input class="formInput" type="text" name="ldName" ng-model="name" required ng-maxlength="50" ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
-                                <span class="errorTipModal" ng-show="LdCreateForm.ldName.$dirty && LdCreateForm.ldName.$error.required">Required!</span>
-                                <span class="errorTipModal" ng-show="LdCreateForm.ldName.$error.pattern">The design name cannot contain this symbol.</span>
-                                <span class="errorTipModal" ng-show="LdCreateForm.ldName.$error.maxlength">The design name cannot be longer than 50 characters.</span>
+                                <input class="formInput" type="text" name="ldName" ng-model="name" required
+                                       ng-maxlength="50" ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
                                 <span class="clearfix"></span>
-				            </div>
-				            <div class="formLevel">
-				                <label class="formLabel formLabel"><i class="icon-flag"></i> Language Level:</label>
+                            </div>
 
-				                <div class="formCheck">
-				                	<span ng-show="qcerError">{{ qcerError }}</span>
-				                	<span ng-repeat="qceropt in qceropts" class="qcerOptData" >
+                            <div class="formLevel">
+                                <div class="errorBox">
+                                </div>
+                                <label class="formLabel formLabel"><i class="icon-flag"></i> QCER Level:</label>
+
+                                <div class="formCheck">
+                                    <span ng-show="qcerError">{{ qcerError }}</span>
+				                	<span ng-repeat="qceropt in qceropts" class="qcerOptData">
 				                    	<input type="checkbox" ng-model="selectedQcers[qceropt.id]"> {{ qceropt.name }}
 				                	</span>
-				                </div>
-				                <span class="clearfix"></span>
-				            </div>
-				            <div class="formLevel">
-				                <label class="formLabel"><i class="icon-time"></i> Design Scope*:</label>
-				                <input class="formInput" type="text" ng-model="ld.scope" placeholder="typeahead..." required="">
-				                <span class="clearfix"></span>
+                                </div>
+                                <span class="clearfix"></span>
+                            </div>
 
-				                <div class="formTag">
-				                    <ul class="zeroMargin scopes" ng-show="ld.scope">
-				                        <li class="modalEditItem"><span class="modalEditItemLink">{{ld.scope}} <a ng-href="#"><i
-				                                class="icon-remove-circle"></i> </a></span>
-				                        </li>
-				                    </ul>
-				                </div>
-				            </div>
+                            <div class="formLevel">
+                                <div class="errorBox">
+                                    <span class="errorTipModal"
+                                          ng-show="LdCreateForm.ldScope.$dirty && LdCreateForm.ldScope.$error.required">Required!</span>
+                                    <span class="errorTipModal" ng-show="LdCreateForm.ldScope.$error.pattern">The design scope cannot contain this symbol.</span>
+                                    <span class="errorTipModal" ng-show="LdCreateForm.ldScope.$error.maxlength">The design scope cannot be longer than 50 characters.</span><span
+                                        class="clearfix"></span>
+                                </div>
+                                <label class="formLabel"><i class="icon-time"></i> Design Scope*:</label>
+                                <input class="formInput" type="text" name="ldScope" ng-model="ld.scope"
+                                       placeholder="typeahead..." required ng-maxlength="50"
+                                       ng-pattern="/^[a-zA-Z0-9.,:;... òàùèéì/'/-//@#*]+$/">
 
-				            <div class="formLevel">
-				                <label class="formLabel"><i class="icon-map-marker"></i> Topics*:</label>
-				                <input class="formInput" type="text" ng-model="ld.subjects" typeahead="suggestion for suggestion in getSubjects($viewValue)" placeholder="Topics..." required="">
-				                <span class="clearfix"></span>
+                                <div class="formTag">
+                                    <ul class="zeroMargin scopes" ng-show="ld.scope">
+                                        <li class="modalEditItem"><span class="modalEditItemLink">{{ld.scope}} <a
+                                                ng-href="#"><i
+                                                class="icon-remove-circle"></i> </a></span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
 
-				                <div class="formTag">
-				                    <ul ng-repeat="subject in ld.subjects" class="zeroMargin subjects">
-				                        <li class="modalEditItem"><span class="modalEditItemLink">{{subject}} <a ng-href="#"><i
-				                                class="icon-remove-circle"></i> </a></span>
-				                        </li>
-				                    </ul>
-				                </div>
-				            </div>
-				            <div class="formLevel">
-				                <label class="formLabel"><i class="icon-tasks"></i> Objectives*:</label>
-				                <input class="formInput" type="text" ng-model="ld.aims" placeholder="typeahead..." required="">
-				                <span class="clearfix"></span>
+                            <div class="formLevel">
+                                <div class="errorBox">
+                                    <span class="errorTipModal"
+                                          ng-show="LdCreateForm.ldTopic.$dirty && LdCreateForm.ldTopic.$error.required">Required!</span>
+                                    <span class="errorTipModal" ng-show="LdCreateForm.ldTopic.$error.pattern">A topic cannot contain this symbol.</span>
+                                    <span class="errorTipModal" ng-show="LdCreateForm.ldTopic.$error.maxlength">A topic cannot be longer than 255 characters.</span><span
+                                        class="clearfix"></span>
+                                </div>
+                                <label class="formLabel"><i class="icon-map-marker"></i> Topics*:</label>
+                                <input class="formInput" type="text" ng-model="ld.subjects" name="ldTopic"
+                                       typeahead="suggestion for suggestion in getSubjects($viewValue)"
+                                       placeholder="Topics..." required ng-maxlength="255"
+                                       ng-pattern="/^[a-zA-Z0-9.,:;... òàùèéì/'/-//@#*]+$/">
+                                <span class="clearfix"></span>
 
-				                <div class="formTag">
-				                    <ul ng-repeat="aim in ld.aims" class="zeroMargin objectives">
-				                        <li class="modalEditItem"><span class="modalEditItemLink">{{aim}} <a ng-href="#"><i
-				                                class="icon-remove-circle"></i> </a></span>
-				                        </li>
-				                    </ul>
-				                </div>
-				            </div>
-				            <div class="formLevel">
-				                <label class="formLabel"><i class="icon-backward"></i> Pre-Requisites:</label>
-				                <input class="formInput" type="text" ng-model="ld.needs" placeholder="typeahead..." required="">
-				                <span class="clearfix"></span>
+                                <div class="formTag">
+                                    <ul ng-repeat="subject in ld.subjects" class="zeroMargin subjects">
+                                        <li class="modalEditItem"><span class="modalEditItemLink">{{subject}} <a
+                                                ng-href="#"><i
+                                                class="icon-remove-circle"></i> </a></span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
 
-				                <div class="formTag">
-				                    <ul ng-repeat="need in ld.needs" class="zeroMargin prerequisites">
-				                        <li class="modalEditItem"><span class="modalEditItemLink">{{need}} <a ng-href="#"><i
-				                                class="icon-remove-circle"></i> </a></span>
-				                        </li>
-				                    </ul>
+                            <div class="formLevel">
+                                <div class="errorBox">
+                                    <span class="errorTipModal"
+                                          ng-show="LdCreateForm.ldObjective.$dirty && LdCreateForm.ldObjective.$error.required">Required!</span>
+                                    <span class="errorTipModal" ng-show="LdCreateForm.ldObjective.$error.pattern">An objective  cannot contain this symbol.</span>
+                                    <span class="errorTipModal" ng-show="LdCreateForm.ldObjective.$error.maxlength">An objective cannot be longer than 255 characters.</span><span
+                                        class="clearfix"></span>
+                                </div>
+                            <label class="formLabel"><i class="icon-tasks"></i> Objectives*:</label>
+                            <input class="formInput" type="text" name="ldObjective" ng-model="ld.aims"
+                                   placeholder="typeahead..." required ng-maxlength="255"
+                                   ng-pattern="/^[a-zA-Z0-9.,:;... òàùèéì/'/-//@#*]+$/">
+                            <span class="clearfix"></span>
 
-				                </div>
-				            </div>
+                            <div class="formTag">
+                                <ul ng-repeat="aim in ld.aims" class="zeroMargin objectives">
+                                    <li class="modalEditItem"><span class="modalEditItemLink">{{aim}} <a ng-href="#"><i
+                                            class="icon-remove-circle"></i> </a></span>
+                                    </li>
+                                </ul>
+                            </div>
+                    </div>
 
-				            <div class="formLevel">
-				                <label class="formLabel"><i class="icon-user"></i> Students' Description:</label>
-				                <textarea class="formInput" ng-model="ld.students" rows="4"></textarea>
-				                <span class="clearfix"></span>
-				            </div>
+                    <div class="formLevel">
+                        <div class="errorBox">
+                            <span class="errorTipModal" ng-show="LdCreateForm.ldRequisite.$error.pattern">A pre-requisite cannot contain this symbol.</span>
+                            <span class="errorTipModal" ng-show="LdCreateForm.ldRequisite.$error.maxlength">A pre-requisite cannot be longer than 255 characters.</span>
 
-				        </form>
+                        </div>
+                        <label class="formLabel"><i class="icon-backward"></i> Pre-Requisites:</label>
+                        <input class="formInput" type="text" name="ldRequisite" ng-model="ld.needs"
+                               placeholder="typeahead..."  ng-maxlength="255"
+                               ng-pattern="/^[a-zA-Z0-9.,:;... òàùèéì/'/-//@#*]+$/">
+                        <span class="clearfix"></span>
 
-				    </div><!-- End Modal Body -->
-				    <div class="modal-footer">
-				        <button id="cancelCreateLd" class="btn btnFormCancel" ng-click="closeLD()">Cancel</button>
-				        <button class="btn btnForm " ng-click="ok()">Create</button>
-				    </div>
-				</div>
-				<!-- End LD creation Modal -->
-            </div>
-            <!--/.nav-collapse -->
+                        <div class="formTag">
+                            <ul ng-repeat="need in ld.needs" class="zeroMargin prerequisites">
+                                <li class="modalEditItem"><span class="modalEditItemLink">{{need}} <a ng-href="#"><i
+                                        class="icon-remove-circle"></i> </a></span>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+                    <div class="formLevel">
+                        <div class="errorBox">
+                            <span class="errorTipModal" ng-show="LdCreateForm.ldStudentsDescr.$error.pattern">Students' description cannot contain this symbol.</span>
+                            <span class="errorTipModal" ng-show="LdCreateForm.ldStudentsDescr.$error.maxlength">Students' description cannot be longer than 500 characters.</span>
+
+                        </div>
+                        <label class="formLabel"><i class="icon-user"></i> Students' Description:</label>
+                        <textarea class="formInput" name="ldStudentsDescr" ng-model="ld.students" rows="4" ng-maxlength="500"  ng-pattern="/^[a-zA-Z0-9.,:;... òàùèéì/'/-//@#*]+$/"></textarea>
+                        <span class="clearfix"></span>
+                    </div>
+
+
+                </div>
+                <!-- End Modal Body -->
+                <div class="modal-footer">
+                    <button id="cancelCreateLd" class="btn btnFormCancel" ng-click="closeLD()">Cancel</button>
+                    <button id="confirmCreateLD" type="submit" class="btn btnForm " ng-disabled="LdCreateForm.$invalid" >Create</button>
+                </div>
+                    </form>
+                </div>
+            <!-- End LD creation Modal -->
         </div>
+        <!--/.nav-collapse -->
     </div>
+</div>
 
 </div>
 <!-- End Nav Bar User View -->
-
-
 
 
 <div ng-view class="container">
