--- a/client/css/app.css
+++ b/client/css/app.css
@@ -633,7 +633,34 @@ input.sidebarInput {
 
 /* edit elements
 ===================== */
+.titleLDInput {
+}
+input.titleLDInput {
+    width: 60%;
+    border-radius: 4px;
+    border-width: 1px;
+    font-weight: bold;
+    color: #990000;
+    margin: 0 0 15px 0;
+    text-align: center;
+padding: 2px 5px;
+}
+input.scopeLDInput {
+    width: 35%;
+    border-radius: 4px;
+    border-width: 1px;
+    padding: 0 1%;
+    text-align: center;
+    color: #990000;
+}
 
+.qcerCheck {
+    background-color: #ffffff;
+    color: #990000;
+    border-radius: 4px;
+    margin-left: 1%;
+    padding: 0 2px;
+}
 .onoffswitch {
     position: relative;
     width: 120px;
@@ -749,12 +776,35 @@ input.sidebarInput {
 
 .titleRight {
     float: right;
+    text-align: right;
+    padding: 2px 10px;
+    width: 35%;
+}
+.titleQcer {
+    margin:5px 0 0 0;
+    font-weight: bold;
+    width: 100%;
+}
+
+.titleQcer .round {
+    margin: 0 0 0 8px;
+}
+
+.titleScope {
+    font-weight: bold;
+    margin: 5px 0 0 0;
 }
 
 .titleLeft {
     float: left;
+    width: 60%;
+    margin: 15px 0;
 }
-
+.titleEdit {
+    width: 95%;
+    margin: 10px auto;
+    text-align: center;
+}
 .nav {
     margin-bottom: -5px;
 }
@@ -2070,6 +2120,36 @@ border: 1px solid #0099CC;
         float: none;
         width: 100%;
     }
+    .titleRight {
+        float: none;
+        text-align: center;
+        margin: 10px 0;
+        padding: 0;
+        width: 95%;
+    }
+
+    .titleLeft {
+        float: none;
+        width: 95%;
+        text-align: center;
+        margin: 10px 0;
+        padding: 0;
+    }
+    .titleQcer {
+        margin:15px 0 10px 0;
+    }
+
+    input.titleLDInput {
+        width: 95%;
+    }
+
+    .titleQcer .round {
+        margin: 0 4px;
+    }
+
+    .titleScope {
+        margin: 5px 0 0 0;
+    }
 
 }
 
@@ -2142,16 +2222,7 @@ border: 1px solid #0099CC;
         width: 24px;
     }
 
-    .titleRight {
-        float: none;
-        text-align: center;
-        margin: 10px;
-    }
 
-    .titleLeft {
-        float: none;
-        text-align: center;
-    }
 
     .actBox {
         text-overflow: ellipsis;
