--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -111,8 +111,8 @@
             <h4>{{learningDesign.ld_name }}</h4>
         </div>
         <div class="titleRight">
-            <h4><span ng-repeat="qcer in learningDesign.qcers" class="round qceritem">{{ qcer.qcer_name }}</span> {{
-                learningDesign.ld_scope }}</h4>
+           <div class="titleQcer"> <span ng-repeat="qcer in learningDesign.qcers" class="round ">{{ qcer.qcer_name }}</span></div>
+            <div class="titleScope">{{learningDesign.ld_scope }}</div>
         </div>
         <div class="clearfix"></div>
     </div>
