adding class to fix e2e test

--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -111,7 +111,7 @@
             <h4>{{learningDesign.ld_name }}</h4>
         </div>
         <div class="titleRight">
-           <div class="titleQcer"> <span ng-repeat="qcer in learningDesign.qcers" class="round ">{{ qcer.qcer_name }}</span></div>
+           <div class="titleQcer"> <span ng-repeat="qcer in learningDesign.qcers" class="round qceritem ">{{ qcer.qcer_name }}</span></div>
             <div class="titleScope">{{learningDesign.ld_scope }}</div>
         </div>
         <div class="clearfix"></div>
