--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -23,7 +23,7 @@
             <div class="authorName">
 
                 <!-- FIXME: add dynamic link to LD author profile page -->
-                <a ng-href="#"> <i class="icon-user icon-white"></i> {{ learningDesign.user_name }}&nbsp;{{
+                <a ng-href="/user/{{ learningDesign.user_id }}"> <i class="icon-user icon-white"></i> {{ learningDesign.user_name }}&nbsp;{{
                     learningDesign.user_last_name
                     }} </a>
             </div>
