--- a/client/views/index.html
+++ b/client/views/index.html
@@ -84,7 +84,7 @@
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#"><i class="icon-cog"></i> My Profile</a></li>
+                            <li><a href="/user/{{ user.id }}"><i class="icon-cog"></i> My Profile</a></li>
                             <li><a href="#"><i class="icon-pencil"></i> My Designs</a></li>
                             <li class="divider"></li>
                             <li><a id="logoutLink" ng-click="logout()" href=""><i class="icon-off"></i> Logout</a></li>
@@ -264,7 +264,8 @@
         <a href="https://github.com/danielabar" target="_blank">Daniela Baron</a></div>
 </div>
 <!-- Vendor Lib -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>  -->
+<script src="/js/lib/underscore-min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-cookies.js"></script>
 
