--- a/client/css/app.css
+++ b/client/css/app.css
@@ -1347,6 +1347,11 @@ ul.listNode li {
     display: inline;
 }
 
+.smallText {
+    font-size: 16px;
+    text-transform: lowercase;
+}
+
 img.user-pic {
     width: 50px;
     height: 50px;
