#3 clear topic input box after enter

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -156,8 +156,8 @@
 
                             <div class="formLevel">
                                 <div class="errorBox">
-                                    <!-- <span class="errorTipModal"
-                                          ng-show="LdCreateForm.ldTopic.$dirty && LdCreateForm.ldTopic.$error.required">Required!</span> -->
+                                    <span class="errorTipModal"
+                                          ng-show="LdCreateForm.ldTopic.$dirty && LdCreateForm.ldTopic.$error.required">Required!</span>
                                     <span class="errorTipModal" ng-show="LdCreateForm.ldTopic.$error.pattern">A topic cannot contain this symbol.</span>
                                     <span class="errorTipModal" ng-show="LdCreateForm.ldTopic.$error.maxlength">A topic cannot be longer than 255 characters.</span><span
                                         class="clearfix"></span>
@@ -167,7 +167,6 @@
                                        typeahead="suggestion for suggestion in getSubjects($viewValue)"
                                        typeahead-on-select="addTopicFromSuggestion()"
                                        ui-keypress="{13:'addTopicFromUserInput($event)'}"
-                                       ng-change="clearTopic()"
                                        placeholder="Topics..." required ng-maxlength="255"
                                        ng-pattern="/^[a-zA-Z0-9.,:;... òàùèéì/'/-//@#*]+$/">
                                 <span class="clearfix"></span>
