pictures for user profiles

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -80,7 +80,7 @@
                             <li class="dropdown">
 
                             <li id="loggedInUserName" class="nav-username">{{ user.username }}</li>
-                            <img src="/img/user.png" alt="User Avatar" class="img-rounded user-pic"/>
+                            <img ng-src="/img/pics/user.png" alt="User Avatar" class="img-rounded user-pic"/>
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
