--- a/client/css/app.css
+++ b/client/css/app.css
@@ -1393,18 +1393,18 @@ img.user-pic-big {
 }
 
 .nav-closed:hover .nav-username {
-    color: #cccccc;
 
-    text-shadow: 0 1px 1px #FFF, 0 -1px 1px #fff;
+    text-shadow: 0 1px 2px #666;
 }
 
 .nav-closed:hover .user-pic {
-    border-color: #ccc;
+    box-shadow: 0 1px 2px #666;
 }
 
 .nav-closed:hover .caret {
-    border-top-color: #999;
-    border-bottom-color: #999;
+    box-shadow: 0 1px 2px #666;
+    border-top-color: #ffffff;
+    border-bottom-color: #ffffff;
 }
 
 .caret {
