--- a/client/views/index.html
+++ b/client/views/index.html
@@ -60,7 +60,7 @@
             <div ng-controller="NavActionCtrl" class="nav-collapse collapse">
                 <ul class="nav-top-pad nav">
                     <li>
-                        <button type="button" class="btn btn-small btn-menu">Explore LDs</button>
+                        <button type="button" class="btn btn-small btn-menu" onclick="location.href='/lds'">Explore LDs</button>
                     </li>
                     <li>
                         <button id="createLd" type="button" class="btn btn-small btn-menu" href ng-click="createLD()">
@@ -70,7 +70,7 @@
 
                     </li>
                     <li>
-                        <button type="button" class="btn btn-small btn-menu">Find Users</button>
+                        <button type="button" class="btn btn-small btn-menu" onclick="location.href='/users'" >Find Users</button>
                     </li>
 
                 </ul>
