--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -111,8 +111,8 @@
             <h4>{{learningDesign.ld_name }}</h4>
         </div>
         <div class="titleRight">
-           <div class="titleQcer"> <span ng-repeat="qcer in learningDesign.qcers" class="round qceritem ">{{ qcer.qcer_name }}</span></div>
-            <div class="titleScope">{{learningDesign.ld_scope }}</div>
+           <div class="titleQcer" ng-show="learningDesign.qcers"><i class="icon-signal icon-white"></i><span ng-repeat="qcer in learningDesign.qcers" class="round qceritem ">{{ qcer.qcer_name }}</span></div>
+            <div class="titleScope"><i class="icon-bell icon-white"></i> {{learningDesign.ld_scope }}</div>
         </div>
         <div class="clearfix"></div>
     </div>
@@ -141,8 +141,8 @@
                                         class="icon-th-large icon-white"></i> {{ child.org_label}}</span>
                             </div>
                             <div class="actLabel" ng-show="child.group_child_type=='LD'">
-                                <span class="timeLabel"><i class="icon-time icon-white"></i> {{ child.scope}}</span>
-                                    <span class="orgLabel"><i class="icon-flag icon-white"
+                                <span class="timeLabel"><i class="icon-bell icon-white"></i> {{ child.scope}}</span>
+                                    <span class="orgLabel"><i class="icon-signal icon-white"
                                                               ng-show="child.qcers"></i> <span
                                             ng-repeat="qcer in child.qcers">{{ qcer.qcer_name }} </span></span>
                             </div>
@@ -161,8 +161,8 @@
                         <span class="orgLabel"><i class="icon-th-large icon-white"></i> {{ node.org_label }}</span>
                     </div>
                     <div class="actLabel" ng-show="node.type=='LD'">
-                        <span class="timeLabel"><i class="icon-time icon-white"></i> {{ node.scope }}</span>
-                            <span class="orgLabel"><i class="icon-flag icon-white" ng-show="node.qcers"></i> <span
+                        <span class="timeLabel"><i class="icon-bell icon-white"></i> {{ node.scope }}</span>
+                            <span class="orgLabel"><i class="icon-signal icon-white" ng-show="node.qcers"></i> <span
                                     ng-repeat="qcer in node.qcers"> {{ qcer.qcer_name }} </span></span>
                     </div>
                 </a>
